<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_nav_register"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:alpha="0"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@+id/btn_nav_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_nav_login"
            tools:alpha="1" />

        <Button
            android:id="@+id/btn_nav_login"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="0"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/btn_guest"
            app:layout_constraintEnd_toStartOf="@+id/btn_nav_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="1" />

        <ImageView
            android:id="@+id/image_dicogram"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:alpha="0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dicogram_logo"
            app:layout_constraintBottom_toTopOf="@+id/btn_nav_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="1" />

        <Button
            android:id="@+id/btn_guest"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:text="@string/guest_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_nav_register"
            app:layout_constraintStart_toStartOf="@+id/btn_nav_login"
            tools:alpha="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>