<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.story.UploadActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/new_post" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/post_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/caption"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_preview">

                <space.mrandika.dicogram.component.DGEditText
                    android:id="@+id/et_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/field_caption"
                app:layout_constraintTop_toBottomOf="@+id/field_caption" />

            <include
                android:id="@+id/upload_loading"
                layout="@layout/state_loading_generic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/btn_post"
                app:layout_constraintEnd_toEndOf="@+id/btn_post"
                app:layout_constraintStart_toStartOf="@+id/btn_post"
                app:layout_constraintTop_toTopOf="@+id/btn_post"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/checkbox_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location_add"
                app:layout_constraintStart_toStartOf="@+id/field_caption"
                app:layout_constraintTop_toBottomOf="@+id/field_caption" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>